Lagt til Game States
- Ved start av applikasjonen vises en splashscreen mens
nødvendig data lastes opp/initialiseres

- Brukeren kan starte nytt/laste inn spill fra hovedmenyen